log/build_2022-10-19_22-59-21/robo_miner_ai_py/stderr.log
  File "/home/ubuntu/workspace/Velizar/robotics_v1/install/robo_miner_ai_py/lib/python3.8/site-packages/robo_miner_ai_py/robo_miner_ai.py", line 741
    self.obstacles)
    ^
SyntaxError: invalid syntax

